# schema/site.pb.go
@@ -3,7 +3,7 @@
 // DO NOT EDIT!
 
 /*
-Package site is a generated protocol buffer package.
+Package schema is a generated protocol buffer package.
 
 It is generated from these files:
 	site.proto
@@ -14,7 +14,7 @@ It has these top-level messages:
 	InfoCall
 	User
 */
-package site
+package schema
 
 import proto "github.com/golang/protobuf/proto"
 import fmt "fmt"
@@ -158,10 +158,10 @@ func (m *User) GetTwitterHandle() string {
 }
 
 func init() {
-	proto.RegisterType((*RegisterCall)(nil), "RegisterCall")
-	proto.RegisterType((*LoginCall)(nil), "LoginCall")
-	proto.RegisterType((*InfoCall)(nil), "InfoCall")
-	proto.RegisterType((*User)(nil), "User")
+	proto.RegisterType((*RegisterCall)(nil), "schema.RegisterCall")
+	proto.RegisterType((*LoginCall)(nil), "schema.LoginCall")
+	proto.RegisterType((*InfoCall)(nil), "schema.InfoCall")
+	proto.RegisterType((*User)(nil), "schema.User")
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -190,7 +190,7 @@ func NewUsersClient(cc *grpc.ClientConn) UsersClient {
 
 func (c *usersClient) Register(ctx context.Context, in *RegisterCall, opts ...grpc.CallOption) (*User, error) {
 	out := new(User)
-	err := grpc.Invoke(ctx, "/Users/Register", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/schema.Users/Register", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -199,7 +199,7 @@ func (c *usersClient) Register(ctx context.Context, in *RegisterCall, opts ...gr
 
 func (c *usersClient) Login(ctx context.Context, in *LoginCall, opts ...grpc.CallOption) (*User, error) {
 	out := new(User)
-	err := grpc.Invoke(ctx, "/Users/Login", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/schema.Users/Login", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -208,7 +208,7 @@ func (c *usersClient) Login(ctx context.Context, in *LoginCall, opts ...grpc.Cal
 
 func (c *usersClient) Info(ctx context.Context, in *InfoCall, opts ...grpc.CallOption) (*User, error) {
 	out := new(User)
-	err := grpc.Invoke(ctx, "/Users/Info", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/schema.Users/Info", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -237,7 +237,7 @@ func _Users_Register_Handler(srv interface{}, ctx context.Context, dec func(inte
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/Users/Register",
+		FullMethod: "/schema.Users/Register",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(UsersServer).Register(ctx, req.(*RegisterCall))
@@ -255,7 +255,7 @@ func _Users_Login_Handler(srv interface{}, ctx context.Context, dec func(interfa
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/Users/Login",
+		FullMethod: "/schema.Users/Login",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(UsersServer).Login(ctx, req.(*LoginCall))
@@ -273,7 +273,7 @@ func _Users_Info_Handler(srv interface{}, ctx context.Context, dec func(interfac
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/Users/Info",
+		FullMethod: "/schema.Users/Info",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(UsersServer).Info(ctx, req.(*InfoCall))
@@ -282,7 +282,7 @@ func _Users_Info_Handler(srv interface{}, ctx context.Context, dec func(interfac
 }
 
 var _Users_serviceDesc = grpc.ServiceDesc{
-	ServiceName: "Users",
+	ServiceName: "schema.Users",
 	HandlerType: (*UsersServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
@@ -305,28 +305,29 @@ var _Users_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("site.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 358 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x52, 0x41, 0x4e, 0xeb, 0x30,
-	0x10, 0x55, 0xfa, 0x93, 0xff, 0x93, 0xf9, 0x14, 0x90, 0x5b, 0x50, 0x1a, 0x10, 0xaa, 0x22, 0x81,
-	0xca, 0x26, 0x11, 0x05, 0x89, 0x2d, 0xa8, 0x2c, 0x40, 0x62, 0x15, 0xa9, 0xeb, 0xc8, 0x10, 0x37,
-	0xb8, 0x4a, 0xec, 0xc8, 0x36, 0x74, 0xcf, 0x05, 0x58, 0x70, 0x19, 0xee, 0xc1, 0x15, 0x38, 0x08,
-	0xca, 0xa4, 0xa9, 0xe8, 0x02, 0xd8, 0xf9, 0x3d, 0xcf, 0x9b, 0x37, 0x7e, 0x63, 0x00, 0xcd, 0x0d,
-	0x8b, 0x2a, 0x25, 0x8d, 0x0c, 0xf6, 0x73, 0x29, 0xf3, 0x82, 0xc5, 0xb4, 0xe2, 0x31, 0x15, 0x42,
-	0x1a, 0x6a, 0xb8, 0x14, 0xba, 0xb9, 0x0d, 0x2b, 0xd8, 0x48, 0x58, 0xce, 0xb5, 0x61, 0x6a, 0x42,
-	0x8b, 0x82, 0x0c, 0xc0, 0x7e, 0xd4, 0x4c, 0xf9, 0xd6, 0xd0, 0x1a, 0xfd, 0x1f, 0x3b, 0xd1, 0x54,
-	0x33, 0x95, 0x20, 0x45, 0x02, 0x70, 0x2b, 0xaa, 0xf5, 0x42, 0xaa, 0xcc, 0xef, 0x0c, 0xad, 0x91,
-	0x97, 0xac, 0x30, 0x39, 0x86, 0xed, 0xf6, 0x9c, 0xde, 0x4b, 0x31, 0xe3, 0xaa, 0xf4, 0xff, 0x60,
-	0xcd, 0x56, 0xcb, 0x4f, 0x1a, 0x3a, 0x9c, 0x80, 0x77, 0x2b, 0x73, 0x2e, 0xd0, 0x2e, 0x00, 0xb7,
-	0xee, 0x2d, 0x68, 0xc9, 0xd0, 0xd2, 0x4b, 0x56, 0xf8, 0x27, 0xbf, 0xf0, 0x08, 0xdc, 0x1b, 0x31,
-	0x93, 0xbf, 0xf5, 0x08, 0x5f, 0x2c, 0xb0, 0xa7, 0xcb, 0xe1, 0xbf, 0x35, 0xea, 0x83, 0xc3, 0x4a,
-	0xca, 0x8b, 0xa5, 0x4b, 0x03, 0xc8, 0x00, 0x5c, 0xae, 0x53, 0x9a, 0x95, 0x5c, 0xe0, 0x53, 0xdc,
-	0xe4, 0x1f, 0xd7, 0x97, 0x35, 0x24, 0x3d, 0x70, 0xb8, 0x4e, 0xb3, 0xb9, 0x6f, 0x23, 0x6f, 0x73,
-	0x7d, 0x35, 0x27, 0x87, 0xb0, 0x69, 0x16, 0xdc, 0x18, 0xa6, 0xd2, 0x07, 0x2a, 0xb2, 0x82, 0xf9,
-	0x0e, 0xb6, 0xeb, 0x2e, 0xd9, 0x6b, 0x24, 0xc7, 0x6f, 0x16, 0x38, 0xf5, 0x44, 0x9a, 0x5c, 0x80,
-	0xdb, 0x46, 0x4f, 0xba, 0xd1, 0xd7, 0x2d, 0x04, 0x4d, 0xee, 0xe1, 0xc1, 0xf3, 0xfb, 0xc7, 0x6b,
-	0xc7, 0x0f, 0x77, 0xe3, 0xa7, 0x13, 0xdc, 0x5f, 0x3d, 0xb2, 0x8e, 0x55, 0xab, 0x3a, 0x07, 0x07,
-	0xa3, 0x24, 0x10, 0xad, 0x22, 0x6d, 0xb5, 0x7b, 0xa8, 0xdd, 0x09, 0x7b, 0xeb, 0xda, 0x02, 0xeb,
-	0xcf, 0xc0, 0xae, 0xe3, 0x23, 0x5e, 0xd4, 0xa6, 0xd8, 0xca, 0x02, 0x94, 0xf5, 0x09, 0x59, 0x97,
-	0x71, 0x31, 0x93, 0x77, 0x7f, 0xf1, 0xcb, 0x9c, 0x7e, 0x06, 0x00, 0x00, 0xff, 0xff, 0xcc, 0x6f,
-	0xae, 0x99, 0x5e, 0x02, 0x00, 0x00,
+	// 373 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x92, 0xd1, 0x4a, 0xf3, 0x30,
+	0x14, 0xc7, 0xe9, 0xbe, 0x76, 0x5f, 0x77, 0xbe, 0x7d, 0x3a, 0xb3, 0x29, 0xb5, 0x8a, 0x8c, 0x80,
+	0x32, 0x6f, 0x56, 0x9c, 0x4f, 0xa0, 0x53, 0x50, 0x10, 0x2f, 0x0a, 0xbb, 0x2e, 0x71, 0xcd, 0xba,
+	0x8c, 0x36, 0x19, 0x49, 0x74, 0xf7, 0xbe, 0x80, 0x17, 0x3e, 0x9a, 0x6f, 0x20, 0x3e, 0x88, 0x34,
+	0x5d, 0x86, 0x1b, 0xa8, 0x77, 0x3d, 0xff, 0xe6, 0xfc, 0xfe, 0x39, 0xff, 0x13, 0x00, 0xc5, 0x34,
+	0xed, 0xcf, 0xa5, 0xd0, 0x02, 0xd5, 0xd5, 0x78, 0x4a, 0x0b, 0x12, 0x1e, 0x66, 0x42, 0x64, 0x39,
+	0x8d, 0xc8, 0x9c, 0x45, 0x84, 0x73, 0xa1, 0x89, 0x66, 0x82, 0xab, 0xea, 0x14, 0x5e, 0x40, 0x33,
+	0xa6, 0x19, 0x53, 0x9a, 0xca, 0x21, 0xc9, 0x73, 0xd4, 0x05, 0xf7, 0x51, 0x51, 0x19, 0x38, 0x5d,
+	0xa7, 0xf7, 0x6f, 0xd0, 0xec, 0x57, 0x90, 0xfe, 0x48, 0x51, 0x19, 0x9b, 0x3f, 0x28, 0x04, 0x7f,
+	0x4e, 0x94, 0x5a, 0x08, 0x99, 0x06, 0xb5, 0xae, 0xd3, 0x6b, 0xc4, 0xab, 0x1a, 0x9d, 0x42, 0xcb,
+	0x7e, 0x27, 0x63, 0xc1, 0x27, 0x4c, 0x16, 0xc1, 0x1f, 0x73, 0x66, 0xdb, 0xea, 0xc3, 0x4a, 0xc6,
+	0x43, 0x68, 0xdc, 0x89, 0x8c, 0x71, 0xe3, 0x1a, 0x82, 0x5f, 0xb2, 0x39, 0x29, 0xa8, 0x71, 0x6e,
+	0xc4, 0xab, 0xfa, 0x27, 0x3f, 0x7c, 0x02, 0xfe, 0x2d, 0x9f, 0x88, 0xdf, 0x18, 0xf8, 0xc5, 0x01,
+	0x77, 0xb4, 0xbc, 0xfc, 0xb7, 0x46, 0x1d, 0xf0, 0x68, 0x41, 0x58, 0xbe, 0x74, 0xa9, 0x0a, 0xb4,
+	0x0f, 0x3e, 0x53, 0x09, 0x49, 0x0b, 0xc6, 0xcd, 0x28, 0x7e, 0xfc, 0x97, 0xa9, 0x8b, 0xb2, 0x44,
+	0x6d, 0xf0, 0x98, 0x4a, 0xd2, 0x59, 0xe0, 0x1a, 0xdd, 0x65, 0xea, 0x6a, 0x86, 0x8e, 0x61, 0x4b,
+	0x2f, 0x98, 0xd6, 0x54, 0x26, 0x53, 0xc2, 0xd3, 0x9c, 0x06, 0x9e, 0xc1, 0xfd, 0x5f, 0xaa, 0x37,
+	0x46, 0x1c, 0xbc, 0x3b, 0xe0, 0x95, 0x37, 0x52, 0xe8, 0x1e, 0x7c, 0xbb, 0x01, 0xd4, 0xb1, 0x79,
+	0x7f, 0xdd, 0x49, 0xb8, 0xb6, 0x05, 0x7c, 0xf4, 0xfc, 0xf6, 0xf1, 0x5a, 0x0b, 0xf0, 0x5e, 0xf4,
+	0x74, 0x66, 0x96, 0x5a, 0x0e, 0xa0, 0x22, 0x69, 0x19, 0xd7, 0xe0, 0x99, 0x60, 0xd1, 0x8e, 0x6d,
+	0x5b, 0xe5, 0xbc, 0x41, 0x3a, 0x30, 0xa4, 0x5d, 0xdc, 0x5e, 0x27, 0xe5, 0xa6, 0xfb, 0x12, 0xdc,
+	0x32, 0x5a, 0xd4, 0xb2, 0x2d, 0x36, 0xe8, 0x0d, 0x48, 0x68, 0x20, 0x1d, 0x84, 0xd6, 0x21, 0x8c,
+	0x4f, 0xc4, 0x43, 0xdd, 0xbc, 0xb1, 0xf3, 0xcf, 0x00, 0x00, 0x00, 0xff, 0xff, 0x60, 0x07, 0x6a,
+	0x34, 0x97, 0x02, 0x00, 0x00,
 }
